--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,3 +1,7 @@
+*body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .dashboard {
   display: flex;
   flex-direction: column;
@@ -6,7 +10,7 @@
 }
 
 .dashboard-header {
-  background-color: #fff;
+  background-color: #9cc6db;
   padding: 20px 30px;
   border-bottom: 1px solid #e0e0e0;
   display: flex;
@@ -19,6 +23,16 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+}
+
+.sidebar-nav {
+  background-color: #fcf6d9;
+  padding: 15px 30px;
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  border-bottom: 1px solid #e0e0e0;
+  flex-wrap: wrap;
 }
 
 .dashboard-header .logo {
